# praca_magisterska_orbifoldy

./: .gitignore  .tex  14_07_spis_treści  2021-07-09-Notatka-08-27.xopp  Abstrakt po polsku.txt  README.md  brudnopis  praca_magisterska_orbifoldy.tex  todo_2023_08_24
.bin/: ..sh  new_chapter.sh  new_script.sh  rename_chapter.sh  send_to_server.sh
Algorithms for searching in the spectrum/: Algorithms for searching in the spectrum.tex
Algorithms_for_searching_the_spectrum/: Algorithms_for_searching_the_spectrum.tex
LaTeX/: .latexmkrc  .new_chapter.sh  .new_script.sh  .rename_chapter.sh  .send_to_server.sh  dedication.tex  part_of_preamble.tex  praca_magisterska_orbifoldy.tex  q.tex
Rust/searching/: Cargo.toml
Rust/searching/config/: denominators.json  points_order_and_occurence_.json  points_order_and_occurences.json  points_order_and_occurences_.json
Rust/searching/src/: backend_lib.rs  common_lib.rs  denominators.rs  denominators_exclusive.rs  denominators_exclusive_is.rs  denominators_lib.rs  disk_orbifolds_lib.rs  frontend_lib.rs  lib.rs  mathematics_lib.rs  orbifolds_lib.rs  order_and_occurences_lib.rs  other_stuff.rs  point_order_and_occurences.rs  points_order_and_occurences_lib.rs  searching_algorithm_lib.rs
Rust/searching/src/config/: denominators.json  point_order_and_occurences.json  points_order_and_occurences.json
TeX_files/: bibliography.tex  conclusions.tex  connection_with_modular_forms.tex  counting_occurrences.tex  decidability.tex  different_definitions_of_an_orbifold.tex  introduction.tex  order_structure.tex  title_page.tex  (+1 more)
(+71 files in other folders)
