[package]
name = "searching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4"
num-traits = "0.2"

[[bin]]
name = "point_order_and_occurences"
path = "src/point_order_and_occurences.rs"

[[bin]]
name = "printing_the_spectrum"
path = "src/other_stuff.rs"